--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # compiled output
 /dist
 /dist-server
@@ -10,6 +8,7 @@
 /node_modules
 
 # IDEs and editors
+.idea/
 .project
 .classpath
 .c9/
